--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,25 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web') // 버전을 명시하지 않아야만 맨 위에 작성한 버전을 따라감
     //implementation('org.springframework.boot:spring-boot-starter-web')
 
+    // lombok 설정
+    compile('org.projectlombok:lombok')
+    /*annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.projectlombok:lombok'*/
+
+    // 스프링 부트 버전에 맞춰 자동으로 JPA 관련 라이브러리들의 버전을 관리
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+    compile('com.h2database:h2')    // 인메모리 관계형 데이터베이스, 테스트 용도로 많이 사용
+
     //testImplementation('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+// lombok 설정
+/*configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}*/
