등록/수정/조회 만들기 - 수정, 삭제 화면 및 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+# h2 영구저장 설정 (안됨)
+spring.datasource.url=jdbc:h2:file:D:/h2data
 spring.jpa.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
+
+# 코드 실시간 반영 관련
+#spring.devtools.livereload.enabled=true
+#spring.freemarker.cache=false
